fixed desktop images showing on mobile view

--- a/styles/_aboutUs.scss
+++ b/styles/_aboutUs.scss
@@ -12,6 +12,9 @@
     #jumbotron {
       display: none;
     }
+    #desktopImages {
+      display: none;
+    }
     p {
       font-size: 0.9em;
       text-align: center;
