--- a/styles/style.css
+++ b/styles/style.css
@@ -100,6 +100,10 @@ header .topNav .mainNav li a {
   display: none;
 }
 
+.aboutUs #content #desktopImages {
+  display: none;
+}
+
 .aboutUs #content p {
   font-size: 0.9em;
   text-align: center;
